--- a/src/global.css
+++ b/src/global.css
@@ -218,3 +218,10 @@ mark.CC-mark {
   margin-block-start: 0.3em;
   margin-block-end: 0.3em;
 }
+
+/* Checkboxes grid layout */
+.GA-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+}
