--- a/src/tailwind-entry.css
+++ b/src/tailwind-entry.css
@@ -28,6 +28,14 @@
     color: var(--text-normal);
     padding-top: 2px !important;
   }
+
+  .info-icon {
+    color: var(--text-normal);
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    padding-top: 3px !important;
+  }
   
   .ga-global {
     color: #ef4444;
