--- a/src/tailwind-entry.css
+++ b/src/tailwind-entry.css
@@ -100,7 +100,7 @@
   }
 
   .GA-Subtype-Options {
-    margin-left: 10px;
+    @apply ga-ml-2 ga-inline-flex ga-items-baseline ga-gap-x-1;
 
     .icon {
       color: var(--text-normal);
@@ -112,6 +112,62 @@
 
     .GA-Option-span {
       padding: 2px;
+    }
+  }
+
+  .GA-CCs {
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+
+    .is-unresolved {
+      color: var(--text-muted);
+    }
+
+    .GA-details {
+      padding-left: 20px;
+    }
+    .GA-node,
+    .CC-sentence {
+      font-size: var(--font-size-secondary);
+      border: 1px solid transparent;
+      border-radius: 5px;
+    }
+
+    .CC-sentence:hover {
+      background-color: var(--background-secondary-alt);
+    }
+
+    .CC-item {
+      padding-left: 30px;
+      font-weight: 600;
+    }
+
+    .CC-sentence {
+      padding-left: 40px;
+      color: var(--text-muted);
+    }
+    .top-row span + span {
+      float: right;
+    }
+
+    span.GA-measure {
+      background-color: var(--background-secondary-alt);
+      padding: 2px 4px;
+      border-radius: 3px;
+      font-size: 12px;
+      line-height: 12px;
+    }
+    span.GA-measure:hover {
+      background-color: var(--interactive-accent);
+    }
+
+    .currComm {
+      color: var(--text-accent);
+    }
+
+    .currNode {
+      font-weight: bold;
     }
   }
 }
