--- a/src/tailwind-entry.css
+++ b/src/tailwind-entry.css
@@ -182,4 +182,13 @@
   body.is-mobile .ga-details::before {
     @apply ga-text-lg;
   }
+
+  .GA-img img {
+    max-width: 25%;
+    max-height: 25%;
+  }
+  .GA-img img:hover {
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
